--- a/Mantenimiento-Ventas/Examen02.csproj
+++ b/Mantenimiento-Ventas/Examen02.csproj
@@ -267,5 +267,8 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background.JPG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
